Bug 729204 - Make docshell privacy notifications work across multiple processes. r=bz